feat(index): created the index.html boilerplate

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="midth=device-with, initial-scale=1.0" />
         <title>Studion</title>
     </head>
 
     <body>
         <h1>Hello World</h1>
-        <h6>Estou estudando HTML!</h6>
+        <h2>Hello World</h2>
+        <h3>Hello World</h3>
+        <h4>Hello World</h4>
+        <h5>Hello World</h5>
+        <h6>Hello World</h6>        
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente soluta magni quasi, architecto eaque temporibus qui atque fugiat eius dignissimos omnis quam at enim ut voluptate vero reiciendis sequi illo!</P>
     </body>
 </html>
