--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
 
     <body>
        <nav class="navbar">
-           <h1>Studi<span>on</span><span>Eventos</span></h1>
-            <ul class="navbar__links">
+           <h1 class="logo-studion">
+            Studi<span class="copy--primary">on</span>
+            <span class="logo-studion__subtitle">Eventos</span>
+        </h1>
+        <ul class="navbar__links">
                 <li>
                     <a href="#empresa">
                     Empresa
@@ -42,9 +45,19 @@
        <header>
             <div id="slider">
                 <div class="slide">
-                    <h6><span>Próximo evento</span> - Dia 25 de setembro às 19h</h6>
-                    <h2><span>Creative</span> Minds</h2>
-                    <button>Saiba Mais</button>
+                   <img
+                     class="slide__background-image"
+                     src="./images/banner.jpg"
+                     alt="Studion Banner"
+                     > 
+                     <div class="slide__copy">
+                         <h6>
+                            <span class="copy--primary">Próximo evento</span> - Dia 25 de
+                             setembro às 19h
+                            </h6>
+                         <h2><span class="copy--primary">Creative</span> Minds</h2>
+                         <button class="btn btn--slide">Saiba Mais</button>
+                     </div>
                 </div>
             </div>
        </header>
@@ -75,6 +88,8 @@
                 <p>
                     Unde quo quam suscipit quia tempore! Doloribus incidunt iusto alias distinctio, ex possimus nemo omnis dolore dolor nisi
                     beatae delectus? Ipsam, explicabo!
+                    Unde quo quam suscipit quia tempore! Doloribus incidunt iusto alias distinctio, ex possimus nemo omnis dolore dolor nisi
+                    beatae delectus? Ipsam, explicabo!
                 </p>
                 <button>Saiba Mais</button>
             </div>
@@ -96,6 +111,7 @@
         <form>
             <label>receba news e promoções</label>
             <input type="email" placeholder="email">
+            <button type="submit">Enviar</button>
         </form>
         <ul>
             <li><a href="https:facebook.com/" target="_blank">Facebook</a></li>
