--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <body>
        <nav class="navbar">
+       <div class="container navbar__container">
            <h1 class="logo-studion">
             Studi<span class="copy--primary">on</span>
             <span class="logo-studion__subtitle">Eventos</span>
@@ -40,6 +41,7 @@
                     </a>
                 </li>                
             </ul>
+       </div>
        </nav>
        
        <header>
@@ -63,26 +65,41 @@
        </header>
 
        <main>
-        <section>
-            <ul>
+        <section id="counter">
+            <ul class="container counter__container">
                 <li>
-                    <h3>+ de 500</h3>
-                    eventos realizados
+                    <h3>
+                     + de 500
+                        <small>
+                          eventos realizados
+                        </small>
+                    </h3>
                 </li>
                 <li>
-                    <h3>+ de 1.000.000</h3>
-                    de ingressos vendidos
+                    <h3>
+                     + de 1.000.000
+                    <small>
+                      de ingressos vendidos
+                    </small>
+                    </h3>
                 </li>
                 <li>
-                    <h3>+ de 300</h3>
-                    empresas atendidas
+                    <h3>
+                     + de 300
+                     <small>
+                      empresas atendidas
+                     </small>
+                    </h3>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <div>
-                <img src="./images/institutional.jpg">
+        <section class="container institutional">
+            <img 
+             class="institutional__image"
+             src="./images/institutional.jpg"
+             alt="Studion institutional">
+            <div class="institutional__copy">
                 <h6>Fazemos o seu evento acontecer</h6>
                 <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
                 <p>
@@ -91,7 +108,7 @@
                     Unde quo quam suscipit quia tempore! Doloribus incidunt iusto alias distinctio, ex possimus nemo omnis dolore dolor nisi
                     beatae delectus? Ipsam, explicabo!
                 </p>
-                <button>Saiba Mais</button>
+                <button class="btn btn--institutional">Saiba Mais</button>
             </div>
         </section>
 
