--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,9 @@
                     </a>
                 </li>
             </ul>
+            <button class="navbar__menu-btn">
+                <i class="fas fa-bars"></i>
+            </button>
         </div>
     </nav>
 
